feat(back): adds ppi crud and all models to database
