# backend/src/modules/ppi/types/dtos/requests/get-all-ppis-req.dto.ts
@@ -1,0 +1,10 @@
+import { ApiPropertyOptional } from "@nestjs/swagger"
+import { IsOptional, IsString } from "class-validator"
+import { PaginationReqDto } from "src/common/types/dtos/pagination-req.dto"
+
+export class GetAllPPIsReqDto extends PaginationReqDto {
+    @ApiPropertyOptional()
+    @IsString()
+    @IsOptional()
+    classPeriod: string
+}
