# backend/src/modules/ppi/types/dtos/requests/update-subject-ppi-req.dto.ts
@@ -1,0 +1,11 @@
+import { ApiProperty } from "@nestjs/swagger"
+import { IsArray, IsNotEmpty, ValidateNested } from "class-validator"
+import { SubjectPPIReq } from "./create-ppi-req.dto"
+
+export class UpdateSubjectPPIReqDto {
+    @ApiProperty()
+    @IsArray()
+    @IsNotEmpty()
+    @ValidateNested()
+    subjects: Array<SubjectPPIReq>
+}
